<resources>
    <string name="app_name">SmartDoctor</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="all_patients">All Patients</string>
    <string name="collection">Collection</string>
    <string name="appointment">Appointment</string>
    <string name="logout">Logout</string>
    <string name="firstname">FirstName</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="reference">Reference</string>
    <string name="update_patient">Update Patient</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="type">Type</string>
    <string name="medicine">Medicine</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="duration">Duration</string>
    <string name="notes_instruction">Notes/ Instruction</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="new_prescription">New Prescription</string>
    <string name="old_prescription">Old Prescription</string>
    <string name="submit">Submit</string>
    <string name="complaints">Complaints</string>
    <string name="advice">Advice</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="next_visit">Next Visit</string>
    <string name="complaint">Complaint:-</string>
    <string name="remark">Remark:</string>
</resources>
