<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RxActivity">


    <include
        android:id="@+id/toolbar_rx"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_rx"
        android:layout_above="@id/ll_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_complaints"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/complaints" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin10">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_diagnosis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/diagnosis"/>
                </com.google.android.material.textfield.TextInputLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin10"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="@dimen/margin10"
                    app:cardElevation="@dimen/margin5"
                    app:cardPreventCornerOverlap="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <AutoCompleteTextView
                                android:id="@+id/act_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:completionThreshold="1"
                                android:hint="@string/type"
                                android:imeOptions="actionNext"
                                android:inputType="textAutoComplete"
                                android:maxLines="1" />

                            <AutoCompleteTextView
                                android:id="@+id/act_medicine"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:completionThreshold="1"
                                android:hint="@string/medicine"
                                android:imeOptions="actionNext"
                                android:inputType="textAutoComplete"
                                android:maxLines="1" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <AutoCompleteTextView
                                android:id="@+id/act_morning"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:completionThreshold="1"
                                android:hint="@string/morning"
                                android:imeOptions="actionNext"
                                android:inputType="textAutoComplete"
                                android:maxLines="1" />

                            <AutoCompleteTextView
                                android:id="@+id/act_evening"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:completionThreshold="1"
                                android:hint="@string/evening"
                                android:imeOptions="actionNext"
                                android:inputType="textAutoComplete"
                                android:maxLines="1" />

                            <AutoCompleteTextView
                                android:id="@+id/act_night"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:completionThreshold="1"
                                android:hint="@string/night"
                                android:imeOptions="actionNext"
                                android:inputType="textAutoComplete"
                                android:maxLines="1" />

                            <AutoCompleteTextView
                                android:id="@+id/act_duration"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:completionThreshold="1"
                                android:hint="@string/duration"
                                android:imeOptions="actionNext"
                                android:inputType="textAutoComplete"
                                android:maxLines="1" />
                        </LinearLayout>

                        <AutoCompleteTextView
                            android:id="@+id/act_notes_inst"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:completionThreshold="1"
                            android:hint="@string/notes_instruction"
                            android:imeOptions="actionNext"
                            android:inputType="textAutoComplete"
                            android:maxLines="2" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btn_clear"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin20"
                                android:layout_weight="1"
                                android:background="@color/grey"
                                android:text="@string/clear"
                                android:textAllCaps="true" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btn_add"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin20"
                                android:layout_weight="1"
                                android:background="@color/green50"
                                android:text="@string/add"
                                android:textAllCaps="true" />

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/new_prescription"
                    android:textColor="@color/brown700"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_new_prescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/old_prescription"
                    android:textColor="@color/brown700"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_old_prescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_advice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/advice"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin10">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_nextvisitdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/next_visit"
                        android:editable="false"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_button"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin10">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_prescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green300"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>
</RelativeLayout>