<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity"
    android:background="@android:color/transparent">

    <!--<ImageView
        android:id="@+id/ivbackgroundimg"
        android:layout_width="@dimen/margin150dp"
        android:layout_height="@dimen/margin150dp"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin30"
        />-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/tv_title"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textStyle="bold|italic"
        android:textSize="60sp"
        android:layout_marginTop="@dimen/margin100"
        android:gravity="center_horizontal" />
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_quiz"
        android:id="@+id/tv_title"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textStyle="bold"
        android:textSize="60sp"
        android:layout_marginTop="@dimen/margin100"
        android:gravity="center_horizontal" />-->

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_title"
        android:layout_marginLeft="@dimen/margin30"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginRight="@dimen/margin30"
        android:layout_marginBottom="@dimen/margin30"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        tools:context=".activity.LoginActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin10"
            android:elevation="@dimen/margin10"
            app:cardCornerRadius="@dimen/margin15"
            app:cardElevation="@dimen/margin15"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin15"
                android:orientation="vertical"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMobileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email_address"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin10">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin10"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="6" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_forgotpassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/margin5"
                        android:layout_marginRight="@dimen/margin5"
                        android:layout_marginBottom="@dimen/margin5"
                        android:text="@string/forgot_password"
                        android:textSize="@dimen/textsize15" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnlogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin10"
                        android:background="@color/colorPrimaryDark"
                        android:text="@string/login"
                        android:textColor="@color/black" />

                    <!-- <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_marginTop="@dimen/margin10">

                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right"
                             android:layout_marginTop="@dimen/margin5"
                             android:layout_marginRight="@dimen/margin5"
                             android:layout_marginBottom="@dimen/margin5"
                             android:text="@string/don_t_have_account"
                             android:textSize="@dimen/textsize15" />

                         <TextView
                             android:layout_width="wrap_content"
                             android:id="@+id/tv_signup"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right"
                             android:layout_marginTop="@dimen/margin5"
                             android:layout_marginRight="@dimen/margin5"
                             android:layout_marginBottom="@dimen/margin5"
                             android:text="@string/signup"
                             android:textColor="@color/black"
                             android:textStyle="bold"
                             android:textSize="@dimen/textsize16" />


                     </LinearLayout>
 -->                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/margin60"
                    android:layout_height="@dimen/margin40"
                    android:gravity="bottom"
                    android:src="@drawable/praxello"
                    android:layout_marginTop="@dimen/margin60"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</RelativeLayout>